# rag-web-api

./: .gitignore  Dockerfile  Makefile  README.md  env.example  pyproject.toml  test_chat.py  test_document.txt
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: chat.py  health.py  ingest.py  rag.py
app/core/: config.py
app/services/: document_processor.py  queue.py  rag_service.py  storage.py  vector_store.py
app/workers/: document_worker.py
docker/localstack/: docker-compose.yml
docker/prod/: .dockerignore  Dockerfile  docker-compose.yml  nginx.conf
requirements/: base.txt  dev.txt  prod.txt
scripts/: cleanup_all.py  cleanup_duplicates.py  run_docker.sh  run_local.sh  run_worker.sh  setup_localstack.sh
tests/: test_chat.py  test_ingest.py  test_main.py  test_worker.py
